added local control for player. Don't use it for multiplayer.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -751,6 +751,10 @@ HierarchicalLODOutliner.TimeStamp=2019.12.20-23.26.41
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2019.12.20-23.26.38
 ExternalImagePicker.LastCompileMethod=Unknown
+Voice.TimeStamp=2019.12.20-23.27.05
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2019.12.20-23.26.48
+MovieSceneCapture.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -974,6 +978,74 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+BP_PlayerPawn_C.TransformCommon=True
+BP_PlayerPawn_C.Animation=True
+BP_PlayerPawn_C.Mesh=True
+BP_PlayerPawn_C.Clothing=True
+BP_PlayerPawn_C.Physics=True
+BP_PlayerPawn_C.MasterPoseComponent=True
+BP_PlayerPawn_C.Collision=True
+BP_PlayerPawn_C.Lighting=True
+BP_PlayerPawn_C.ClothingSimulation=True
+BP_PlayerPawn_C.Rendering=True
+BP_PlayerPawn_C.Tags=True
+BP_PlayerPawn_C.Activation=True
+BP_PlayerPawn_C.Cooking=True
+BP_PlayerPawn_C.Character Movement (General Settings)=True
+BP_PlayerPawn_C.Character Movement: Walking=True
+BP_PlayerPawn_C.Character Movement: Jumping / Falling=True
+BP_PlayerPawn_C.Character Movement (Networking)=True
+BP_PlayerPawn_C.Character Movement: Swimming=True
+BP_PlayerPawn_C.Character Movement: Flying=True
+BP_PlayerPawn_C.Character Movement: Custom Movement=True
+BP_PlayerPawn_C.Character Movement (Rotation Settings)=True
+BP_PlayerPawn_C.Character Movement: Physics Interaction=True
+BP_PlayerPawn_C.Character Movement=True
+BP_PlayerPawn_C.Character Movement: Avoidance=True
+BP_PlayerPawn_C.RootMotion=True
+BP_PlayerPawn_C.Character Movement: NavMesh Movement=True
+BP_PlayerPawn_C.NavMovement=True
+BP_PlayerPawn_C.Velocity=True
+BP_PlayerPawn_C.PlanarMovement=True
+BP_PlayerPawn_C.MovementComponent=True
+BP_PlayerPawn_C.Shape=True
+BP_PlayerPawn_C.Navigation=True
+BP_PlayerPawn_C.Character=True
+BP_PlayerPawn_C.Camera=True
+BP_PlayerPawn_C.Pawn=True
+BP_PlayerPawn_C.Replication=True
+BP_PlayerPawn_C.Input=True
+BP_PlayerPawn_C.Actor=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+BP_PlayerPawn_C.SkeletalMesh=True
+BP_PlayerPawn_C.Optimization=True
+BP_PlayerPawn_C.MaterialParameters=True
+BP_PlayerPawn_C.HLOD=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1009,7 +1081,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/maps
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1098,10 +1170,15 @@ PaperRuntimeSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputS
 TcpMessagingSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,
+BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[3]\" "
 Object=
+BP_PlayerPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SCharacter="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
