added mesh component to weapon.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,8 +104,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.15-21.14.43
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.04.16-00.13.11
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -1398,9 +1398,11 @@ BoolProperty.Variable=True
 BoolProperty.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1433,7 +1435,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/CoopGame/Public
+ContentBrowserTab1.SelectedPaths=/Game/AnimStarterPack
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1571,14 +1573,15 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem1=/Game/Blueprints/BP_PlayerPawn
-MRUItem2=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem0=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem1=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem2=/Game/Blueprints/BP_PlayerPawn
 MRUItem3=/Game/maps/VoidMap
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=1
 /Game/Blueprints/Animations/BP_CharacterAnimation.BP_CharacterAnimation=1
+/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint=1
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
