--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1400,9 +1400,64 @@ K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 AnimStateNode.GraphNodeDetail=True
 AnimStateNode.Animation State=True
+BP_Weapon_C.Tick=True
+BP_Weapon_C.Rendering=True
+BP_Weapon_C.Replication=True
+BP_Weapon_C.Input=True
+BP_Weapon_C.Actor=True
+BP_Weapon_C.TransformCommon=True
+BP_Weapon_C.Animation=True
+BP_Weapon_C.Mesh=True
+BP_Weapon_C.ComponentTick=True
+BP_Weapon_C.Clothing=True
+BP_Weapon_C.Physics=True
+BP_Weapon_C.MasterPoseComponent=True
+BP_Weapon_C.Collision=True
+BP_Weapon_C.Lighting=True
+BP_Weapon_C.ClothingSimulation=True
+BP_Weapon_C.Tags=True
+BP_Weapon_C.ComponentReplication=True
+BP_Weapon_C.Activation=True
+BP_Weapon_C.Variable=True
+BP_Weapon_C.Cooking=True
+BP_Rifle_C.TransformCommon=True
+BP_Rifle_C.Animation=True
+BP_Rifle_C.Mesh=True
+BP_Rifle_C.Tick=True
+BP_Rifle_C.ComponentTick=True
+BP_Rifle_C.Clothing=True
+BP_Rifle_C.Physics=True
+BP_Rifle_C.MasterPoseComponent=True
+BP_Rifle_C.Collision=True
+BP_Rifle_C.Lighting=True
+BP_Rifle_C.ClothingSimulation=True
+BP_Rifle_C.Rendering=True
+BP_Rifle_C.Tags=True
+BP_Rifle_C.ComponentReplication=True
+BP_Rifle_C.Activation=True
+BP_Rifle_C.Variable=True
+BP_Rifle_C.Cooking=True
+BP_Rifle_C.Replication=True
+BP_Rifle_C.Input=True
+BP_Rifle_C.Actor=True
+BP_Rifle_C.Sockets=True
+BP_Rifle_C.Events=True
+BP_Rifle_C.Materials=True
+K2Node_VariableGet.Events=True
+BoneProxy.Transform=True
+BoneProxy.Bone=True
+BoneProxy.Reference Transform=True
+SkeletalMeshSocket.Socket Parameters=True
+EditorKeyboardShortcutSettings.AnimViewportLODCmd=True
+EditorKeyboardShortcutSettings.AnimViewportMenu=True
+EditorKeyboardShortcutSettings.AnimViewportPlayback=True
+EditorKeyboardShortcutSettings.AnimViewportShowCmd=True
+EditorKeyboardShortcutSettings.CurveViewer=True
+EditorKeyboardShortcutSettings.SkeletonEditor=True
+EditorKeyboardShortcutSettings.SkeletonTree=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1435,7 +1490,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/AnimStarterPack
+ContentBrowserTab1.SelectedPaths=/Game/AnimStarterPack/UE4_Mannequin/Mesh
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1550,12 +1605,13 @@ TcpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bi
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,
 BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
+K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 Object=
-BP_PlayerPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SCharacter="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BP_PlayerPawn_C=
+SCharacter=
 Character=
 Pawn=
 REINST_BP_PlayerPawn_C_34="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1573,15 +1629,20 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem1=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem2=/Game/Blueprints/BP_PlayerPawn
-MRUItem3=/Game/maps/VoidMap
+MRUItem0=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem1=/Game/Blueprints/BP_PlayerPawn
+MRUItem2=/Game/Blueprints/BP_Rifle
+MRUItem3=/Game/Blueprints/BP_Weapon
+MRUItem4=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem5=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem6=/Game/maps/VoidMap
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=1
 /Game/Blueprints/Animations/BP_CharacterAnimation.BP_CharacterAnimation=1
 /Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint=1
+/Game/Blueprints/BP_Rifle.BP_Rifle=1
+/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=1
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1608,6 +1669,8 @@ AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeInd
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 Contexts=(Name="AnimationBlueprintEditor",Commands=)
+Contexts=(Name="SkeletonEditor",Commands=)
+Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
