--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.16-02.45.30
+CoopGame.TimeStamp=2020.04.16-04.06.05
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -1468,6 +1468,12 @@ SkeletalMesh.ImportSettings=True
 SkeletalMesh.Lighting=True
 SkeletalMesh.Animation=True
 SkeletalMesh.Sampling=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+ObjectProperty.Events=True
+K2Node_VariableSet.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1503,7 +1509,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/AnimStarterPack/UE4_Mannequin/Mesh
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1642,10 +1648,10 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem1=/Game/Blueprints/BP_Rifle
-MRUItem2=/Game/Weapons/SK_Rifle
-MRUItem3=/Game/Blueprints/BP_PlayerPawn
+MRUItem0=/Game/Blueprints/BP_PlayerPawn
+MRUItem1=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem2=/Game/Blueprints/BP_Rifle
+MRUItem3=/Game/Weapons/SK_Rifle
 MRUItem4=/Game/Blueprints/BP_Weapon
 MRUItem5=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
 MRUItem6=/Game/Blueprints/Animations/BP_CharacterAnimation
