added a target dummy via blueprint to test damage

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -13,7 +13,7 @@ bShowCompilerLogOnCompileError=False
 DataSourceFolder=(Path="")
 bAnimationReimportWarnings=False
 bSCSEditorShowFloor=False
-SCSViewportCameraSpeed=4
+SCSViewportCameraSpeed=3
 AssetViewerProfileName=
 MaterialQualityLevel=1
 PreviewShaderPlatformName=None
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.16-04.27.22
+CoopGame.TimeStamp=2020.04.16-13.50.31
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -1474,6 +1474,66 @@ ObjectProperty.Events=True
 K2Node_VariableSet.Events=True
 K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
+BP_TargetDummy_C.Tick=True
+BP_TargetDummy_C.Rendering=True
+BP_TargetDummy_C.Replication=True
+BP_TargetDummy_C.Input=True
+BP_TargetDummy_C.Actor=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+SkeletalMeshComponent.Materials=True
+BP_TargetDummy_C.TransformCommon=True
+SkeletalMeshComponent.SkeletalMesh=True
+SkeletalMeshComponent.Optimization=True
+SkeletalMeshComponent.MaterialParameters=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.Mobile=True
+REINST_BP_PlayerPawn_C_47.Variable=True
+REINST_BP_PlayerPawn_C_47.TransformCommon=True
+REINST_BP_PlayerPawn_C_47.Sockets=True
+REINST_BP_PlayerPawn_C_47.CameraSettings=True
+REINST_BP_PlayerPawn_C_47.CameraOptions=True
+REINST_BP_PlayerPawn_C_47.PostProcess=True
+REINST_BP_PlayerPawn_C_47.Tags=True
+REINST_BP_PlayerPawn_C_47.ComponentReplication=True
+REINST_BP_PlayerPawn_C_47.Activation=True
+REINST_BP_PlayerPawn_C_47.Cooking=True
+REINST_BP_PlayerPawn_C_47.Events=True
+REINST_BP_PlayerPawn_C_55.Variable=True
+REINST_BP_PlayerPawn_C_55.TransformCommon=True
+REINST_BP_PlayerPawn_C_55.Sockets=True
+REINST_BP_PlayerPawn_C_55.CameraSettings=True
+REINST_BP_PlayerPawn_C_55.CameraOptions=True
+REINST_BP_PlayerPawn_C_55.PostProcess=True
+REINST_BP_PlayerPawn_C_55.Tags=True
+REINST_BP_PlayerPawn_C_55.ComponentReplication=True
+REINST_BP_PlayerPawn_C_55.Activation=True
+REINST_BP_PlayerPawn_C_55.Cooking=True
+REINST_BP_PlayerPawn_C_55.Events=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1625,10 +1685,11 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bi
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,
 BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
+SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
-Object=
+Object="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 BP_PlayerPawn_C=
 SCharacter=
 Character=
@@ -1643,19 +1704,27 @@ REINST_BP_PlayerPawn_C_25="\"Object.Character.Mesh.Object.Collision.BodyInstance
 REINST_BP_PlayerPawn_C_29="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem2=/Game/Blueprints/BP_Rifle
-MRUItem3=/Game/Weapons/SK_Rifle
-MRUItem4=/Game/Blueprints/BP_Weapon
-MRUItem5=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem6=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem7=/Game/maps/VoidMap
+MRUItem1=/Game/Blueprints/BP_TargetDummy
+MRUItem2=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem3=/Game/Blueprints/BP_Rifle
+MRUItem4=/Game/Weapons/SK_Rifle
+MRUItem5=/Game/Blueprints/BP_Weapon
+MRUItem6=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem7=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem8=/Game/maps/VoidMap
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=1
