muzzle and hit impact effects created.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -763,6 +763,10 @@ SkeletonEditor.TimeStamp=2019.12.20-23.26.58
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2019.12.20-23.26.52
 PinnedCommandList.LastCompileMethod=Unknown
+Cascade.TimeStamp=2019.12.20-23.26.30
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2019.12.20-23.26.34
+DistCurveEditor.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1534,6 +1538,15 @@ REINST_BP_PlayerPawn_C_55.ComponentReplication=True
 REINST_BP_PlayerPawn_C_55.Activation=True
 REINST_BP_PlayerPawn_C_55.Cooking=True
 REINST_BP_PlayerPawn_C_55.Events=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1569,7 +1582,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Weapons
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1689,7 +1702,7 @@ SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMes
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
-Object="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+Object=
 BP_PlayerPawn_C=
 SCharacter=
 Character=
@@ -1716,15 +1729,16 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/BP_TargetDummy
-MRUItem2=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem3=/Game/Blueprints/BP_Rifle
-MRUItem4=/Game/Weapons/SK_Rifle
-MRUItem5=/Game/Blueprints/BP_Weapon
-MRUItem6=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem7=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem8=/Game/maps/VoidMap
+MRUItem0=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
+MRUItem1=/Game/Blueprints/BP_PlayerPawn
+MRUItem2=/Game/Blueprints/BP_TargetDummy
+MRUItem3=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem4=/Game/Blueprints/BP_Rifle
+MRUItem5=/Game/Weapons/SK_Rifle
+MRUItem6=/Game/Blueprints/BP_Weapon
+MRUItem7=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem8=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem9=/Game/maps/VoidMap
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=1
@@ -1733,6 +1747,7 @@ MRUItem8=/Game/maps/VoidMap
 /Game/Blueprints/BP_Rifle.BP_Rifle=0
 /Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
 /Game/Weapons/SK_Rifle.SK_Rifle=0
+/Game/Weapons/Effects/Muzzle/P_Muzzle_Large.P_Muzzle_Large=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1771,5 +1786,38 @@ OnlyBuildVisibility=False
 
 [MessageLog]
 LastLogListing=MapCheck
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 
